# lingmo-daemon

./: CMakeLists.txt
.github/workflows/: package.yml
debian/: changelog  control  copyright
rpm/: lingmo-daemon.spec
src/: application.cpp  appmanager.cpp  com.lingmo.AppManager.xml  com.lingmo.Daemon.conf  com.lingmo.Daemon.service
