cmake_minimum_required(VERSION 3.20)

project(lingmo-daemon VERSION 1.0.0 DESCRIPTION "Lingmo Daemon" LANGUAGES CXX)
set(TARGET lingmo-daemon)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 COMPONENTS Core Widgets DBus REQUIRED)
find_package(QApt REQUIRED)

qt_add_dbus_adaptor(DBUS_SOURCES
                     src/com.lingmo.AppManager.xml
                     src/appmanager.h AppManager)

set(PROJECT_SOURCES
        src/main.cpp
        src/application.cpp
        src/appmanager.cpp
)

set_source_files_properties(${DBUS_SOURCES} PROPERTIES SKIP_AUTOGEN ON)

add_executable(lingmo-daemon
    ${PROJECT_SOURCES}
    ${DBUS_SOURCES}
)

target_link_libraries(lingmo-daemon PRIVATE
    Qt6::Widgets
    Qt6::Core
    Qt6::DBus
    QApt::Main
)

# install(TARGETS ${TARGET} DESTINATION ${CMAKE_INSTALL_BINDIR})

install(TARGETS ${TARGET} DESTINATION "/usr/bin/")

install(FILES src/com.lingmo.Daemon.conf DESTINATION "/etc/dbus-1/system.d/")
install(FILES src/com.lingmo.Daemon.service DESTINATION "/usr/share/dbus-1/system-services/")
install(FILES src/lingmo-permission-surveillance DESTINATION "/usr/bin/")
